hard-gists/1411980/run.log
=== Docker Run Log for 1411980 ===
Started at: Mi 29. Okt 12:13:19 CET 2025

[2025-10-29 12:13:20] START: Running container for 1411980
[2025-10-29 12:13:20] SUCCESS: Container 2cf8d78b1c16598d90b0e8644c5bbc35d18bfabfbe0afea95cfae17214aa8640 started for 1411980
=== Container logs for 1411980 ===
  File "/snippet.py", line 117
    print 'ImageMagick: %s' % ' '.join(proc_args)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1411980 ===
[2025-10-29 12:13:22] INFO: Container 2cf8d78b1c16598d90b0e8644c5bbc35d18bfabfbe0afea95cfae17214aa8640 has stopped
